# expense-tracker

expense-tracker-backend/: app.py  requirements.txt
expense-tracker-backend-rust/: .env
expense-tracker-backend-rust/backend/: Cargo.toml
expense-tracker-backend-rust/backend/migrations/: 0003_migrate..sql
expense-tracker-backend-rust/backend/src/: db.rs  handlers.rs  main.rs  models.rs
expense-tracker-frontend/: package-lock.json  package.json
expense-tracker-frontend/src/: App.svelte  app.css
